--- a/index.html
+++ b/index.html
@@ -11,29 +11,26 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Right Way English</title>
 </head>
-<body class='flex wrap marginZero'>
-    <div id='navBar' class='width boxFont'></div>
-    <div id='content' class='flex wrap fromTop margin2'></div>
-    <div id='footer' class='flex'>
-        <div id='footerInfo' class='font'>
-            <p>Right Way English Agnieszka Tylińska</p>
-            <p>Online English learning platform. 
-                The website includes original lexical and grammar exercises as 
-                well as exercises on the use of linguistic functions and means 
-                useful for the eighth-grade exam, matura exam, as well as 
-                competitions and olympics. I invite.</p>
-        </div>
-        <div class='font flex wrap toLeft marginNewsletter'>
-            <p class='width'>Zapisz się do naszego newslettera</p>
-            <input id='saveToNews' type='email' placeholder='Your e-mail'>
-            <button id="submitNews">Sign In</button>
-        </div>
-    </div>
-    <div id='credits' class='flex width'>
-        <a id='author' href='https://www.linkedin.com/in/przemyslawkot/' target='_blank' class='font'>
-            <span id='name'>Created by: Przemysław Kot</span>
+<body class='flex centerHorizontal centerVertical wrap marginZero'>
+    <div id='navBar' class='width margin05Bottom borderBox'></div>
+    <div id='content' class='flex centerHorizontal centerVertical wrap margin2'></div>
+    <div id='footer' class='flex centerHorizontal centerVertical'></div>
+    <div id='credits' class='flex centerHorizontal centerVertical width darkerBlue padding02'>
+        <a href='https://www.linkedin.com/in/przemyslawkot/' target='_blank' class='font noTextDecor margin025 fontSize05 whiteColor cursorPointer'>
+            <span id='name' class='pading02'>Created by: Przemysław Kot</span>
         </a>
     </div>
+<script src='./data.js'></script>
+<script src='./navbar.js'></script>
+<script src='./footer.js'></script>
+<script src='./logIn.js'></script>
+<script src='./registerForm.js'></script>
+<script src='./register.js'></script>
+<script src='./categories.js'></script>
+<script src='./filter.js'></script>
+<script src='./generateExerciseTypes.js'></script>
+<script src='./exerciseType.js'></script>
+<script src='./exercise.js'></script>
 <script src='./siteScript.js'></script>
 </body>
 </html>
