--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Right Way English</title>
+    <title>RightWay English</title>
 </head>
 <body class='flex centerHorizontal centerVertical wrap marginZero'>
     <div id='navBar' class='width margin05Bottom borderBox'></div>
@@ -20,17 +20,17 @@
             <span id='name' class='pading02'>Created by: Przemysław Kot</span>
         </a>
     </div>
-<script src='./data.js'></script>
-<script src='./navbar.js'></script>
-<script src='./footer.js'></script>
-<script src='./logIn.js'></script>
-<script src='./registerForm.js'></script>
-<script src='./register.js'></script>
-<script src='./categories.js'></script>
-<script src='./filter.js'></script>
-<script src='./generateExerciseTypes.js'></script>
-<script src='./exerciseType.js'></script>
-<script src='./exercise.js'></script>
-<script src='./siteScript.js'></script>
+<script src='./generalSiteComponents/data.js'></script>
+<script src='./generalSiteComponents/navbar.js'></script>
+<script src='./generalSiteComponents/footer.js'></script>
+<script src='./logIn/logIn.js'></script>
+<script src='./register/register.js'></script>
+<script src='./register/registerForm.js'></script>
+<script src='./categories/categories.js'></script>
+<script src='./typesOfExercise/generateExerciseTypes.js'></script>
+<script src='./typesOfExercise/filter.js'></script>
+<script src='./typesOfExercise/exerciseType.js'></script>
+<script src='./exercise/exercise.js'></script>
+<script src='./generalSiteComponents/siteScript.js'></script>
 </body>
 </html>
