--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id='footer' class='flex centerHorizontal centerVertical'></div>
     <div id='credits' class='flex centerHorizontal centerVertical width darkerBlue padding02'>
         <a href='https://www.linkedin.com/in/przemyslawkot/' target='_blank' class='font noTextDecor margin025 fontSize05 whiteColor cursorPointer'>
-            <span id='name' class='pading02'>Created by: Przemysław Kot</span>
+            <span id='name' class='padding02'>Created by: Przemysław Kot</span>
         </a>
     </div>
 <script src='./generalSiteComponents/data.js'></script>
