--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>RightWay English</title>
 </head>
 <body class='flex centerHorizontal centerVertical wrap marginZero'>
-    <div id='navBar' class='width margin05Bottom borderBox'></div>
+    <div id='navBar' class='width height80px'></div>
     <div id='content' class='flex centerHorizontal centerVertical wrap margin2'></div>
     <div id='footer' class='flex centerHorizontal centerVertical'></div>
     <div id='credits' class='flex centerHorizontal centerVertical width darkerBlue padding02'>
@@ -22,6 +22,8 @@
     </div>
 <script src='./generalSiteComponents/data.js'></script>
 <script src='./generalSiteComponents/navbar.js'></script>
+<script src='./mobile/logInForm.js'></script>
+<script src='./mobile/navbarMobile.js'></script>
 <script src='./generalSiteComponents/footer.js'></script>
 <script src='./logIn/logIn.js'></script>
 <script src='./register/register.js'></script>
