--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class='flex centerHorizontal centerVertical wrap marginZero'>
     <div id='navBar' class='width height80px'></div>
-    <div id='content' class='flex centerHorizontal centerVertical wrap margin2'></div>
+    <div id='content' class='flex centerHorizontal centerVertical wrap margin2 transition05s hidden'></div>
     <div id='footer' class='flex centerHorizontal centerVertical'></div>
     <div id='credits' class='flex centerHorizontal centerVertical width darkerBlue padding02'>
         <a href='https://www.linkedin.com/in/przemyslawkot/' target='_blank' class='font noTextDecor margin025 fontSize05 whiteColor cursorPointer'>
